<resources>
    <string name="app_name">ProyectoLucky</string>

    <string name="login_btn_guardar">Registrar</string>

    <string name="create_name">Nombre:</string>
    <string name="create_surname">Apellido:</string>
    <string name="create_phone">Telefono:</string>
    <string name="create_correo">ejemplo@ejemplo.com</string>
    <string name="create_password">Contraseña</string>
    <string name="create_btn_guardar">Agregar</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>